// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build ENRE name with anonymous payload as ArrowFunction 1`] = `
Object {
  "codeLength": 0,
  "codeName": "",
  "payload": Object {
    "as": "ArrowFunction",
  },
  "printableName": "<Anonymous as=\\"ArrowFunction\\">",
}
`;

exports[`Build ENRE name with anonymous payload as Class 1`] = `
Object {
  "codeLength": 0,
  "codeName": "",
  "payload": Object {
    "as": "Class",
  },
  "printableName": "<Anonymous as=\\"Class\\">",
}
`;

exports[`Build ENRE name with anonymous payload as Function 1`] = `
Object {
  "codeLength": 0,
  "codeName": "",
  "payload": Object {
    "as": "Function",
  },
  "printableName": "<Anonymous as=\\"Function\\">",
}
`;

exports[`Build ENRE name with computed payload as NumericLiteral 1`] = `
Object {
  "codeLength": 3,
  "codeName": "123",
  "payload": Object {
    "as": "NumericLiteral",
    "raw": "123",
    "value": "123",
  },
  "printableName": "<Modified raw=\\"123\\" as=\\"NumericLiteral\\" value=\\"123\\">",
}
`;

exports[`Build ENRE name with computed payload as PrivateIdentifier 1`] = `
Object {
  "codeLength": 4,
  "codeName": "#foo",
  "payload": Object {
    "as": "PrivateIdentifier",
    "raw": "foo",
  },
  "printableName": "<Modified raw=\\"foo\\" as=\\"PrivateIdentifier\\">",
}
`;

exports[`Build ENRE name with computed payload as StringLiteral 1`] = `
Object {
  "codeLength": 5,
  "codeName": "'foo'",
  "payload": Object {
    "as": "StringLiteral",
    "raw": "foo",
  },
  "printableName": "<Modified raw=\\"foo\\" as=\\"StringLiteral\\">",
}
`;

exports[`Build ENRE name with file payload cjs 1`] = `
Object {
  "codeLength": 9,
  "codeName": "file0.cjs",
  "payload": Object {
    "base": "file0",
    "ext": "cjs",
  },
  "printableName": "<File base=\\"file0\\" ext=\\"cjs\\">",
}
`;

exports[`Build ENRE name with file payload cts 1`] = `
Object {
  "codeLength": 9,
  "codeName": "file0.cts",
  "payload": Object {
    "base": "file0",
    "ext": "cts",
  },
  "printableName": "<File base=\\"file0\\" ext=\\"cts\\">",
}
`;

exports[`Build ENRE name with file payload d.ts 1`] = `
Object {
  "codeLength": 10,
  "codeName": "file0.d.ts",
  "payload": Object {
    "base": "file0",
    "ext": "d.ts",
  },
  "printableName": "<File base=\\"file0\\" ext=\\"d.ts\\">",
}
`;

exports[`Build ENRE name with file payload js 1`] = `
Object {
  "codeLength": 8,
  "codeName": "file0.js",
  "payload": Object {
    "base": "file0",
    "ext": "js",
  },
  "printableName": "<File base=\\"file0\\" ext=\\"js\\">",
}
`;

exports[`Build ENRE name with file payload json 1`] = `
Object {
  "codeLength": 10,
  "codeName": "file0.json",
  "payload": Object {
    "base": "file0",
    "ext": "json",
  },
  "printableName": "<File base=\\"file0\\" ext=\\"json\\">",
}
`;

exports[`Build ENRE name with file payload jsx 1`] = `
Object {
  "codeLength": 9,
  "codeName": "file0.jsx",
  "payload": Object {
    "base": "file0",
    "ext": "jsx",
  },
  "printableName": "<File base=\\"file0\\" ext=\\"jsx\\">",
}
`;

exports[`Build ENRE name with file payload mjs 1`] = `
Object {
  "codeLength": 9,
  "codeName": "file0.mjs",
  "payload": Object {
    "base": "file0",
    "ext": "mjs",
  },
  "printableName": "<File base=\\"file0\\" ext=\\"mjs\\">",
}
`;

exports[`Build ENRE name with file payload mts 1`] = `
Object {
  "codeLength": 9,
  "codeName": "file0.mts",
  "payload": Object {
    "base": "file0",
    "ext": "mts",
  },
  "printableName": "<File base=\\"file0\\" ext=\\"mts\\">",
}
`;

exports[`Build ENRE name with file payload ts 1`] = `
Object {
  "codeLength": 8,
  "codeName": "file0.ts",
  "payload": Object {
    "base": "file0",
    "ext": "ts",
  },
  "printableName": "<File base=\\"file0\\" ext=\\"ts\\">",
}
`;

exports[`Build ENRE name with file payload tsx 1`] = `
Object {
  "codeLength": 9,
  "codeName": "file0.tsx",
  "payload": Object {
    "base": "file0",
    "ext": "tsx",
  },
  "printableName": "<File base=\\"file0\\" ext=\\"tsx\\">",
}
`;

exports[`Build ENRE name with identifier string 1`] = `
Object {
  "codeLength": 3,
  "codeName": "foo",
  "payload": "foo",
  "printableName": "foo",
}
`;
